# rustvil

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
src/: lib.rs
src/config_files/: mod.rs  xdg.rs
src/fs/: mod.rs  path_ext.rs
src/os/: command_ext.rs  env.rs  mod.rs
src/signals/: mod.rs
src/signals/.github/: CODEOWNERS
