[package]
name = "rustvil"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rustvil, a collection of various Rust utilities"
repository = "https://github.com/h3xOo/rustvil"

[dependencies]
libc = "0.2.174"
thiserror = "2.0.12"

[dev-dependencies]
claim = "0.5.0"
tempfile = "3.20.0"
