[package]
name = "rustvil"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rustvil, a collection of various Rust utilities"
repository = "https://github.com/h3xOo/rustvil"

[dependencies]
libc = "0.2.174"
thiserror = "2.0.12"

[dev-dependencies]
claim = "0.5.0"
tempfile = "3.20.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.59, <=0.61", features = [ "Win32_Foundation", "Win32_System_Console"] }
